--- a/inscripcion.html
+++ b/inscripcion.html
@@ -8,23 +8,45 @@
 </head>
 <body>
     <header>
-            <a href="cine.html">
-                <div class="logo btn-primary"><span>Cinerick</span></div>
-            </a>
+
     </header>
     
     <div class="cuerpo">
+    <p>Tenes un 20% usando este cupon: ERIKAPRO.1 en todos los cinerick de la Argentina. valido hasta el 30/2 al 31/4 </p>
             <div class="container">
                 <div class="row">
-                    <div class="col">
-                        <h3>Promo uno</h3>
-                        
+                    <div class="col col-lg-7 col-xs-12">
+                        <h3>Inscripcion</h3>
+                        <form>
+                            <label for="text">Nombre y apellido :</label>
+                            <input type="text" placeholder="Nombre" id="Nombre">
+                        </form>
+                        <form>
+                            <label for="text">Correo electronico :</label>
+                            <input type="text" placeholder="Correo electronico" id="correo electronico">
+                        </form>
+                        <form>
+                            <label for="text">Celular :</label>
+                            <input type="text" placeholder="Ej: 11-3333-9999" maxlength="10" id="Celular" >
+                        </form>
+                        <form>
+                            <label for="text"> Documento :</label>
+                            <input type="text" placeholder="Documento" id="Documento">
+                                <label for="text">DNI</label>
+                                <input type="radio" name="Documento" id="DNI">
+                                <label for="text">Pasaporte</label>
+                                <input type="radio" name="Documento" id="Pasaporte">
+                                <label for="text">CUIL</label>
+                                <input type="radio" name="Documento" id="CUIL">
+                        </form>
+                        <form class="terminos">
+                            <input type="checkbox">
+                            <label class="terminos" for="text">recibir avisos de promociones</label>
+                            <input type="checkbox">
+                            <label class="terminos" for="text">Acepto los terminos</label>   
+                        </form>
+                                <a href="cine.html"><button type="button">Continuar</button></a>
                     </div>
-                    <div class="col">
-                        <h3>promo dos</h3>
-                    </div>
-                    <div class="col">
-                        <h3>promotres</h3>
                     </div>
                 </div>
             </div>
