--- a/cine.html
+++ b/cine.html
@@ -2,7 +2,6 @@
 <head>
     <title>Cinerick</title>
         <link rel="stylesheet" href="cine.css">
-        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -14,8 +13,60 @@
           </a>
     </header>
 <!--aqui va a estar los -->
-    <div class="barra">
+  <div class="barra">
+    <div class="accordion accordion-flush" id="accordionFlushExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+            Sorteo
+          </button>
+        </h2>
+        <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+            <p>Es este sorteo podras participaar por 2 entras mensuales durante 1 año + 1 remera + un combo box. <br>
+              Para participar tenes que suscribirte <a href="inscripcion.html"> Cinerick </a></p>
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+            Sucursales
+          </button>
+        </h2>
+        <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+            <p>Contamos con sucursales en estas provincias.</p>
+              <ul>
+                <li>Buenos Aires</li>
+                <li>Corrientes</li>
+                <li>Tucuman</li>
+                <li>Cordoba</li>
+                <li>Neuquen</li>
+              </ul>
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+            Cod. de descuentos
+          </button>
+        </h2>
+        <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+            <p>Podes obtener un 15% de descuento usando:</p>
+            <ul>
+              <li>MSTLA en D&D</li>
+              <li>LPGEM en Burguer King</li>
+              <li>OMRPS en Alla</li>
+              <li>PCMEA en Carrefort</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
     <main>
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
@@ -45,45 +96,45 @@
         <div class="container">
       <h2>Mejores peliculas de Marvel</h2>
           <div class="row">
-              <div class="col"> <img src="black-widow.jpg" alt=""></div>
-              <div class="col"><img src="dr-strange.jpg" alt=""></div>
-              <div class="col"><img src="guardianes.jpg" alt=""></div>
-              <div class="col"><img src="spider-man.jpg" alt=""></div>
+              <div class="col col col-xs-6"><img src="black-widow.jpg" alt=""></div>
+              <div class="col col-xs-6"><img src="dr-strange.jpg" alt=""></div>
+              <div class="col col-xs-6"><img src="guardianes.jpg" alt=""></div>
+              <div class="col col-xs-6"><img src="spider-man.jpg" alt=""></div>
           </div>
       <h2>Sandra Bullock</h2>
           <div class="row">
-              <div class="col"><img src="sandra-bullock.jpg" alt=""></div>
-              <div class="col"><img src="sandra.jpg" alt=""></div>
-              <div class="col"><img src="28-dias.jpg" alt=""></div>
-              <div class="col"><img src="pelis.jpg" alt=""></div>
+              <div class="col col-xs-6"><img src="sandra-bullock.jpg" alt=""></div>
+              <div class="col col-xs-6"><img src="sandra.jpg" alt=""></div>
+              <div class="col col-xs-6"><img src="28-dias.jpg" alt=""></div>
+              <div class="col col-xs-6"><img src="pelis.jpg" alt=""></div>
           </div>
       <h2>Mejores peliculas animadas</h2>
           <div class="row">
-              <div class="col"><img src="sing.jpg" alt=""></div>
-              <div class="col"><img src="dory.jpg" alt=""></div>
-              <div class="col"><img src="home.jpg" alt=""></div>
-              <div class="col"><img src="zotopia.jpg" alt=""></div>
+              <div class="col col-xs-6"><img src="sing.jpg" alt=""></div>
+              <div class="col col-xs-6"><img src="dory.jpg" alt=""></div>
+              <div class="col col-xs-6"><img src="home.jpg" alt=""></div>
+              <div class="col col-xs-6"><img src="zotopia.jpg" alt=""></div>
           </div>
       <h2>Peluculas de historias</h2>
           <div class="row">
-              <div class="col"><img src="khan.jpg" alt=""></div>
-              <div class="col"><img src="desde-mi-cielo.jpg" alt=""></div>
-              <div class="col"><img src="wonder.jpg" alt=""></div>
-              <div class="col"><img src="historias-drusadas.jpg" alt=""></div>
+              <div class="col col-xs-6"><img src="khan.jpg" alt=""></div>
+              <div class="col col-xs-6"><img src="desde-mi-cielo.jpg" alt=""></div>
+              <div class="col col-xs-6"><img src="wonder.jpg" alt=""></div>
+              <div class="col col-xs-6"><img src="historias-drusadas.jpg" alt=""></div>
           </div>
       <h2>Peluculas de suspenso/terror</h2>
           <div class="row">
-              <div class="col"><img src="la-mano.jpg" alt=""></div>
-              <div class="col"><img src="baybayman.jpg" alt=""></div>
-              <div class="col"><img src="silencio.jpg" alt=""></div>
-              <div class="col"><img src="split.jpg" alt=""></div>
+              <div class="col col-xs-6"><img src="la-mano.jpg" alt=""></div>
+              <div class="col col-xs-6"><img src="baybayman.jpg" alt=""></div>
+              <div class="col col-xs-6"><img src="silencio.jpg" alt=""></div>
+              <div class="col col-xs-6"><img src="split.jpg" alt=""></div>
           </div>
       <h2>Series copadas</h2>
           <div class="row">
-              <div class="col"><img src="atypical.jpg" alt=""></div>
-              <div class="col"><img src="serie-anne.jpg" alt=""></div>
-              <div class="col"><img src="serie-abogada.jpg" alt=""></div>
-              <div class="col"><img src="serie-liquito.jpg" alt=""></div>
+              <div class="col col-xs-6"><img src="atypical.jpg" alt=""></div>
+              <div class="col col-xs-6"><img src="serie-anne.jpg" alt=""></div>
+              <div class="col col-xs-6"><img src="serie-abogada.jpg" alt=""></div>
+              <div class="col col-xs-6"><img src="serie-liquito.jpg" alt=""></div>
       </div>
     </div>
 </section>
