--- a/cine.html
+++ b/cine.html
@@ -7,140 +7,61 @@
 </head>
 <body>
     <header>
-          <div class="logo"><span>Cinerick</span></div>
-          <a target="blank" href="inscripcion.html">
-            <button type="button" class="botoncito">Suscribite</button>
-          </a>
+          <div class="logo">
+            <h1>Cinerick</h1>
+          </div>
     </header>
 <!--aqui va a estar los -->
   <div class="barra">
-    <div class="accordion accordion-flush" id="accordionFlushExample">
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-            Sorteo
-          </button>
-        </h2>
-        <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body">
-            <p>Es este sorteo podras participaar por 2 entras mensuales durante 1 año + 1 remera + un combo box. <br>
-              Para participar tenes que suscribirte <a href="inscripcion.html"> Cinerick </a></p>
-          </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-            Sucursales
-          </button>
-        </h2>
-        <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body">
-            <p>Contamos con sucursales en estas provincias.</p>
-              <ul>
-                <li>Buenos Aires</li>
-                <li>Corrientes</li>
-                <li>Tucuman</li>
-                <li>Cordoba</li>
-                <li>Neuquen</li>
-              </ul>
-          </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-            Cod. de descuentos
-          </button>
-        </h2>
-        <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body">
-            <p>Podes obtener un 15% de descuento usando:</p>
-            <ul>
-              <li>MSTLA en D&D</li>
-              <li>LPGEM en Burguer King</li>
-              <li>OMRPS en Alla</li>
-              <li>PCMEA en Carrefort</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
+    <a href="cartelera.html"> 
+      <button class="caja">
+        <h2>Cartelera</h2>
+      </button>
+    </a>
+    <a href="inscripcion.html"> 
+      <button class="caja">
+        <h2>Suscripcion</h2>
+      </button>
+    </a>
   </div>
-    <main>
+  <main>
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <a href="https://www.cinemarkhoyts.com.ar/pelicula/INTENSAMENTE-2">
-            <div class="carousel-item active">
-            <img src="promo.jpg" class="d-block w-100" alt="...">
-          </div></a>
-          <a href="https://www.deananddennys.com/">
+          <div class="carousel-item active">
+            <img src="img/promo.jpg" class="d-block w-100" alt="Promocion en cine">
+          </div>
             <div class="carousel-item">
-            <img src="d&d.hamb.jpg" class="d-block w-100" alt="...">
-          </div></a>
-          <div class="carousel-item">
-            <img src="promo-dos.jpg" class="d-block w-100" alt="...">
+            <img src="img/d&d.hamb.jpg" class="d-block w-100" alt="Hambuerguesas de D&D">
           </div>
           <div class="carousel-item">
-            <img src="promo-tres.jpg" class="d-block w-100" alt="...">
+            <img src="img/promo-tres.jpg" class="d-block w-100" alt="Promocion en cine">
           </div>
-          <a href="https://www.burgerking.com.ar/">
           <div class="carousel-item">
-            <img src="bk.hamb.jpg" class="d-block w-100" alt="...">
-          </div></a>
+            <img src="img/bk.hamb.jpg" class="d-block w-100" alt="Hambuerguesas de BuerguerKing">
+          </div>
         </div>
       </div>
-    </main>
-<!--top de las mejores peliculas para mi-->
-    <section>
-        <div class="container">
-      <h2>Mejores peliculas de Marvel</h2>
-          <div class="row">
-              <div class="col col col-xs-6"><img src="black-widow.jpg" alt=""></div>
-              <div class="col col-xs-6"><img src="dr-strange.jpg" alt=""></div>
-              <div class="col col-xs-6"><img src="guardianes.jpg" alt=""></div>
-              <div class="col col-xs-6"><img src="spider-man.jpg" alt=""></div>
-          </div>
-      <h2>Sandra Bullock</h2>
-          <div class="row">
-              <div class="col col-xs-6"><img src="sandra-bullock.jpg" alt=""></div>
-              <div class="col col-xs-6"><img src="sandra.jpg" alt=""></div>
-              <div class="col col-xs-6"><img src="28-dias.jpg" alt=""></div>
-              <div class="col col-xs-6"><img src="pelis.jpg" alt=""></div>
-          </div>
-      <h2>Mejores peliculas animadas</h2>
-          <div class="row">
-              <div class="col col-xs-6"><img src="sing.jpg" alt=""></div>
-              <div class="col col-xs-6"><img src="dory.jpg" alt=""></div>
-              <div class="col col-xs-6"><img src="home.jpg" alt=""></div>
-              <div class="col col-xs-6"><img src="zotopia.jpg" alt=""></div>
-          </div>
-      <h2>Peluculas de historias</h2>
-          <div class="row">
-              <div class="col col-xs-6"><img src="khan.jpg" alt=""></div>
-              <div class="col col-xs-6"><img src="desde-mi-cielo.jpg" alt=""></div>
-              <div class="col col-xs-6"><img src="wonder.jpg" alt=""></div>
-              <div class="col col-xs-6"><img src="historias-drusadas.jpg" alt=""></div>
-          </div>
-      <h2>Peluculas de suspenso/terror</h2>
-          <div class="row">
-              <div class="col col-xs-6"><img src="la-mano.jpg" alt=""></div>
-              <div class="col col-xs-6"><img src="baybayman.jpg" alt=""></div>
-              <div class="col col-xs-6"><img src="silencio.jpg" alt=""></div>
-              <div class="col col-xs-6"><img src="split.jpg" alt=""></div>
-          </div>
-      <h2>Series copadas</h2>
-          <div class="row">
-              <div class="col col-xs-6"><img src="atypical.jpg" alt=""></div>
-              <div class="col col-xs-6"><img src="serie-anne.jpg" alt=""></div>
-              <div class="col col-xs-6"><img src="serie-abogada.jpg" alt=""></div>
-              <div class="col col-xs-6"><img src="serie-liquito.jpg" alt=""></div>
-      </div>
-    </div>
-</section>
+  </main>
   <!--logos con cuentas, puede tener promocione, etc.-->
 <footer>
-
+  <div class="box">
+    <h3>Contactos</h3>
+    <ul>
+      <li>RRTT </li>
+      <li>(+54) 11-9999-9999</li>
+      <li>hola@gmail.com</li>
+      <li>Libro de queja Online</li>
+    </ul>
+  </div>
+  <div class="box">
+    <h3>Redes Socioales</h3>
+    <ul>
+      <li>Instagram</li>
+      <li>Facebook</li>
+      <li>Tik Tok</li>
+      <li>twitter</li>
+    </ul>
+  </div>
 </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
