--- a/inscripcion.html
+++ b/inscripcion.html
@@ -8,53 +8,67 @@
 </head>
 <body>
     <header>
-
+        <a href="cine.html"><div class="inicio"> < Volver al inicio</div></a>
+        <h1>Inscripcion</h1>
     </header>
-    
-    <div class="cuerpo">
+    <main>
     <p>Tenes un 20% usando este cupon: ERIKAPRO.1 en todos los cinerick de la Argentina. valido hasta el 30/2 al 31/4 </p>
             <div class="container">
-                <div class="row">
-                    <div class="col col-lg-7 col-xs-12">
-                        <h3>Inscripcion</h3>
-                        <form>
-                            <label for="text">Nombre y apellido :</label>
-                            <input type="text" placeholder="Nombre" id="Nombre">
+                <div class="completar">
+                    <h2>Completar</h2>
+                <form>
+                    <label for="text">Nombre y apellido :</label>
+                    <input type="text" placeholder="Nombre" id="Nombre">
+                </form>
+                <form>
+                    <label for="text">Correo electronico :</label>
+                    <input type="text" placeholder="Correo electronico" id="correo electronico">
+                </form>
+                <form>
+                    <label for="text">Celular :</label>
+                    <input type="text" placeholder="Ej: 11-3333-9999" maxlength="10" id="Celular" >
+                </form>
+                <form>
+                    <label for="text"> Documento :</label>
+                    <input type="text" placeholder="Documento" id="Documento">
+                        <label for="text">DNI</label>
+                        <input type="radio" name="Documento" id="DNI">
+                        <label for="text">Pasaporte</label>
+                        <input type="radio" name="Documento" id="Pasaporte">
+                        <label for="text">CUIL</label>
+                        <input type="radio" name="Documento" id="CUIL">
                         </form>
-                        <form>
-                            <label for="text">Correo electronico :</label>
-                            <input type="text" placeholder="Correo electronico" id="correo electronico">
-                        </form>
-                        <form>
-                            <label for="text">Celular :</label>
-                            <input type="text" placeholder="Ej: 11-3333-9999" maxlength="10" id="Celular" >
-                        </form>
-                        <form>
-                            <label for="text"> Documento :</label>
-                            <input type="text" placeholder="Documento" id="Documento">
-                                <label for="text">DNI</label>
-                                <input type="radio" name="Documento" id="DNI">
-                                <label for="text">Pasaporte</label>
-                                <input type="radio" name="Documento" id="Pasaporte">
-                                <label for="text">CUIL</label>
-                                <input type="radio" name="Documento" id="CUIL">
-                        </form>
-                        <form class="terminos">
-                            <input type="checkbox">
-                            <label class="terminos" for="text">recibir avisos de promociones</label>
-                            <input type="checkbox">
-                            <label class="terminos" for="text">Acepto los terminos</label>   
-                        </form>
-                                <a href="cine.html"><button type="button">Continuar</button></a>
-                    </div>
+                    <form class="terminos">
+                        <input type="checkbox">
+                        <label class="terminos" for="text">recibir avisos de promociones</label>
+                        <input type="checkbox">
+                        <label class="terminos" for="text">Acepto los terminos</label>   
+                    </form>
+                        <a href="cine.html"><button>Continuar</button></a>
                     </div>
                 </div>
             </div>
-    </div>
-    <div class="categorias">
-
-    </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
+    </main>
+    <footer>
+        <div class="box">
+            <h3>Contactos</h3>
+            <ul>
+                <li>RRTT </li>
+                <li>(+54) 11-9999-9999</li>
+                <li>hola@gmail.com</li>
+                <li>Libro de queja Online</li>
+            </ul>
+        </div>
+        <div class="box">
+            <h3>Redes Socioales</h3>
+            <ul>
+                <li>Instagram</li>
+                <li>Facebook</li>
+                <li>Tik Tok</li>
+                <li>twitter</li>
+            </ul>
+        </div>
+    </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
