--- a/cartelera.html
+++ b/cartelera.html
@@ -26,18 +26,18 @@
         <div class="cartelera">
             <div class="row">
             <div class="col">
-                <img src="img/black-widow.jpg" alt="">
+                <img src="img/black-widow.jpg" alt="Black Widow">
             </div>
             <div class="col">
-                <img src="img/dr-strange.jpg" alt="">
+                <img src="img/dr-strange.jpg" alt="Dr. Strange">
             </div>
             </div>
             <div class="row">
             <div class="col ">
-                <img src="img/guardianes.jpg" alt="">
+                <img src="img/guardianes.jpg" alt="Guardianes de la galaxia">
             </div>
             <div class="col">
-                <img src="img/spider-man.jpg" alt="">
+                <img src="img/spider-man.jpg" alt="Spider-man">
             </div>
         </div>
         </div>
@@ -45,18 +45,18 @@
         <div class="cartelera">
             <div class="row">
             <div class="col">
-                <img src="img/sandra-bullock.jpg" alt="">
+                <img src="img/sandra-bullock.jpg" alt="Osean's 8">
             </div>
             <div class="col ">
-                <img src="img/sandra.jpg" alt="">
+                <img src="img/sandra.jpg" alt="Un sueño posible">
             </div>
             </div>
             <div class="row">
             <div class="col ">
-                <img src="img/28-dias.jpg" alt="">
+                <img src="img/28-dias.jpg" alt="28 dias">
             </div>
             <div class="col ">
-                <img src="img/pelis.jpg" alt="">
+                <img src="img/pelis.jpg" alt="Chicas armas y peligrosas">
             </div>
         </div>
         </div>
@@ -64,18 +64,18 @@
         <div class="cartelera">
             <div class="row">
             <div class="col">
-                <img src="img/sing.jpg" alt="">
+                <img src="img/sing.jpg" alt="Sing 2">
             </div>
             <div class="col ">
-                <img src="img/dory.jpg" alt="">
+                <img src="img/dory.jpg" alt="Buscando a Dory">
             </div>
             </div>
             <div class="row">
             <div class="col">
-                <img src="img/home.jpg" alt="">
+                <img src="img/home.jpg" alt="Home">
             </div>
             <div class="col">
-                <img src="img/zotopia.jpg" alt="">
+                <img src="img/zotopia.jpg" alt="Zotopia">
             </div>
             </div>
         </div>
@@ -83,18 +83,18 @@
         <div class="cartelera">
             <div class="row">
             <div class="col">
-                <img src="img/la-mano.jpg" alt="">
+                <img src="img/la-mano.jpg" alt="Talk to me">
             </div>
             <div class="col">
-                <img src="img/baybayman.jpg" alt="">
+                <img src="img/baybayman.jpg" alt="Nunca digas su nombre">
             </div>
             </div>
             <div class="row">
             <div class="col">
-                <img src="img/silencio.jpg" alt="">
+                <img src="img/silencio.jpg" alt="Silencio">
             </div>
             <div class="col">
-                <img src="img/split.jpg" alt="">
+                <img src="img/split.jpg" alt="Split">
             </div>
             </div>
         </div>
