--- a/cine.html
+++ b/cine.html
@@ -31,13 +31,10 @@
             <img src="img/promo.jpg" class="d-block w-100" alt="Promocion en cine">
           </div>
             <div class="carousel-item">
-            <img src="img/d&d.hamb.jpg" class="d-block w-100" alt="Hambuerguesas de D&D">
+            <img src="img/promo-dos.jpg" class="d-block w-100" alt="Hambuerguesas de D&D">
           </div>
           <div class="carousel-item">
             <img src="img/promo-tres.jpg" class="d-block w-100" alt="Promocion en cine">
-          </div>
-          <div class="carousel-item">
-            <img src="img/bk.hamb.jpg" class="d-block w-100" alt="Hambuerguesas de BuerguerKing">
           </div>
         </div>
       </div>
